# src/features/post/post.model.js
@@ -1,6 +1,6 @@
 import UserModel from "../user/user.model.js";
 
-export default class PostModel {
+class PostModel {
     constructor(id, userId, caption, imageUrl) {
         this.id = id;
         this.userId = userId;
@@ -9,8 +9,8 @@ export default class PostModel {
         this.comments = [];
     }
 
-    static getAll() {
-        return posts;
+    static getAll(offset = 0, pageSize = 10) {
+        return posts.slice(offset, offset + pageSize);
     }
 
     static add(post) {
@@ -20,13 +20,11 @@ export default class PostModel {
     }
 
     static get(id) {
-        const post = posts.find((p) => p.id == id);
-        return post;
+        return posts.find((p) => p.id == id);
     }
 
     static usersPost(userId) {
-        const userPosts = posts.filter((p) => p.userId == userId);
-        return userPosts;
+        return posts.filter((p) => p.userId == userId);
     }
 
     static commentOnPost(userId, postId, comment) {
@@ -52,7 +50,7 @@ export default class PostModel {
         const postIndex = posts.findIndex((p) => p.id == id);
 
         if (postIndex === -1) {
-            return null; 
+            return null;
         }
 
         posts[postIndex] = {
@@ -63,23 +61,28 @@ export default class PostModel {
         return posts[postIndex];
     }
 
-    static deletePost(postId, userId){
-        const postIndex = posts.findIndex( p => p.postId == postId && p.userId == userId);
+    static deletePost(postId, userId) {
+        const postIndex = posts.findIndex(p => p.postId == postId && p.userId == userId);
 
-        if(postIndex ==-1){
+        if (postIndex === -1) {
             return "Post not found";
-        }
-        else{
+        } else {
             posts.splice(postIndex, 1);
         }
-
     }
-
-
 }
 
-let posts = [new PostModel(1, 1, "I am the Best", "http://google.com"),
-new PostModel(2, 1, "Who is the best", "http://google.com"),
-new PostModel(2, 1, "You are the Best", "http://google.com"),
-new PostModel(3, 1, "We are the Best", "http://google.com"),
+const posts = [
+    new PostModel(1, 1, "One", "https://unsplash.com/photos/an-aerial-view-of-a-body-of-water-near-a-road-vdtD3soVFg8"),
+    new PostModel(2, 1, "Two", "https://unsplash.com/photos/woman-in-blue-t-shirt-and-blue-denim-shorts-standing-on-road-during-sunset-N7It-3p13iU"),
+    new PostModel(3, 1, "Three", "https://images.unsplash.com/photo-1616715278869-162f5fa9136d?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(4, 1, "Four", "https://images.unsplash.com/photo-1610972221114-c48c6bb5d2eb?q=80&w=2449&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(5, 1, "Five", "https://images.unsplash.com/photo-1444944232907-0b9e9ace348c?q=80&w=2863&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(6, 1, "Six", "https://images.unsplash.com/photo-1526675849333-144a81e4670d?q=80&w=2875&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(7, 1, "Seven", "https://images.unsplash.com/photo-1486848538113-ce1a4923fbc5?q=80&w=2865&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(8, 1, "Eight", "https://images.unsplash.com/photo-1616715340044-27e7e2b05618?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(9, 1, "Nine", "https://images.unsplash.com/photo-1455158967412-bad272ceee73?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
+    new PostModel(10, 1, "Ten", "https://images.unsplash.com/photo-1569622332090-9ed0fcc3bf35?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
 ];
+
+export default PostModel;
